2002-10-14  David Hyatt  <hyatt@apple.com>

	Stop the insanity.  Make sure that a sheet that is disabled
	while it is still loading is removed from the doc's list
	of pending sheets (for FOUC checks).

	Fixes zeldman.com.
	
        * khtml/html/html_headimpl.cpp:
        (HTMLLinkElementImpl::parseAttribute):

2002-10-14  David Hyatt  <hyatt@apple.com>

	Implementing the ability to individually enable/disable
	both preferred and alternate stylesheets.  Enabling/disabling
	sheets via the disabled property of the <link> element overrides
	whether or not a sheet happens to be alternate or preferred.

	This new implementation of sheet disabling/enabling was a missing
	piece of our HTML4 compliance, and was used by the Wired 
	site to implement its text sizing mechanism.
	
        * khtml/html/html_headimpl.cpp:
        (HTMLLinkElementImpl::HTMLLinkElementImpl):
        (HTMLLinkElementImpl::parseAttribute):
        (HTMLLinkElementImpl::process):
        * khtml/html/html_headimpl.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::recalcStyleSelector):

2002-10-11  Richard Williamson   <rjw@apple.com>

        Remove debugging.
        
        * kwq/WebCoreDOMDocument.mm:
        (+[WebCoreDOMDocument documentWithImpl:DOM::]):
        * kwq/WebCoreDOMNode.mm:
        (-[WebCoreDOMNode lastChild]):

2002-10-11  Richard Williamson   <rjw@apple.com>

        More DOM/attributed string work.  Still need to fix more
        inappropriate casting problems.
        
        * khtml/dom/dom_node.cpp:
        (Node::lastChild):
        * khtml/xml/dom_nodeimpl.cpp:
        (NodeImpl::lastChild):
        (NodeBaseImpl::lastChild):
        * khtml/xml/dom_nodeimpl.h:
        * kwq/KWQKHTMLPartImpl.cpp:
        (KWQKHTMLPartImpl::selectionStartOffset):
        (KWQKHTMLPartImpl::selectionEndOffset):
        (KWQKHTMLPartImpl::selectionStart):
        (KWQKHTMLPartImpl::selectionEnd):
        * kwq/KWQKHTMLPartImpl.h:
        * kwq/WebCoreBridge.h: