@@ -150,9 +150,27 @@ void HTMLLinkElementImpl::parseAttribute(AttributeImpl *attr)
         int oldDisabledState = m_disabledState;
         m_disabledState = (attr->val() != 0) ? 2 : 1;
         if (oldDisabledState != m_disabledState) {
-            if (isLoading() && m_disabledState == 2 && (oldDisabledState == 1 || !isAlternate()))
+            // If we change the disabled state while the sheet is still loading, then we have to
+            // perform two checks:
+            // Check #1: If the sheet becomes disabled while it was loading, and if it was either
+            // a main sheet or a sheet that was previously enabled via script, then we need
+            // to remove it from the list of pending sheets.
+            if (isLoading() && m_disabledState == 2 && (!m_alternate || oldDisabledState == 1))
                 getDocument()->stylesheetLoaded();
-            process();
+                
+            // Check #2: An alternate sheet becomes enabled while it is still loading.
+            if (isLoading() && m_alternate && m_disabledState == 1)
+                getDocument()->addPendingSheet();
+                
+            // If the sheet is already loading just bail.
+            if (isLoading())
+                break;
+            
+            // Load the sheet, since it's never been loaded before.
+            if (!m_sheet && m_disabledState == 1)
+                process();
+            else
+                getDocument()->updateStyleSelector(); // Update the style selector.
         }
         break;
     }
@@ -246,7 +264,7 @@ void HTMLLinkElementImpl::setStyleSheet(const DOM::DOMString &url, const DOM::DO
     m_loading = false;
 
     // Tell the doc about the sheet.
-    if (!isLoading() && m_sheet && !isAlternate())
+    if (!isLoading() && m_sheet && !isDisabled() && !isAlternate())
         getDocument()->stylesheetLoaded();
 }
 
@@ -261,7 +279,7 @@ bool HTMLLinkElementImpl::isLoading() const
 
 void HTMLLinkElementImpl::sheetLoaded()
 {
-    if (!isLoading() && !isAlternate())
+    if (!isLoading() && !isDisabled() && !isAlternate())
         getDocument()->stylesheetLoaded();
 }
 
