@@ -1,5 +1,15 @@
 2002-10-14  David Hyatt  <hyatt@apple.com>
 
+	Really fixing zeldman.com this time.  This disabling stuff
+	is complicated! :)
+	
+        * khtml/html/html_headimpl.cpp:
+        (HTMLLinkElementImpl::parseAttribute):
+        (HTMLLinkElementImpl::setStyleSheet):
+        (HTMLLinkElementImpl::sheetLoaded):
+
+2002-10-14  David Hyatt  <hyatt@apple.com>
+
 	Stop the insanity.  Make sure that a sheet that is disabled
 	while it is still loading is removed from the doc's list
 	of pending sheets (for FOUC checks).
